# CompilerPrinciplesNotes

./: .gitignore  README.md
SimpleParsers/: README.md  ast.py
SimpleParsers/LL_1/: README.md  __init__.py
SimpleParsers/LR_0/: README.md
SimpleParsers/Pratt/: README.md  __init__.py
SimpleRegexEngine/: README.md  __init__.py
SimpleRegexEngine/compiler/: __init__.py  ast.py  lexer.py  parser.py  token.py
SimpleRegexEngine/fa/: __init__.py  dfa.py  nfa.py  utils.py
ezLexer/: README.md  __init__.py  token.py  utils.py
ezVM/: .gitignore  CMakeLists.txt  README.md  assambler.py
ezVM/assambler/: __init__.py  __main__.py  syntax.py
ezVM/example/: hello.asm
ezVM/include/: ezVM.h  loader.h  object.h  opcode.h  utils.h
ezVM/src/: ezVM.cpp  ezVM.h  loader.cpp  main.cpp  object.cpp  object.h  opcode.cpp  opcode.h  utils.cpp  utils.h
ezVM/src/objects/: Bool.cpp  Integer.cpp  None.cpp  String.cpp
